--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Flash briefing skill for the Mensa Griebnitzsee",
   "main": "nodemon server.js",
-  "start": "nodemon server.js",
+  "start": "forever server.js",
   "scripts": {
+    "start": "forever server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
