--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "griebnitzsee-briefing",
   "version": "1.0.0",
   "description": "Flash briefing skill for the Mensa Griebnitzsee",
-  "main": "nodemon server.js",
-  "start": "forever server.js",
+  "main": "node server.js",
+  "start": "node server.js",
   "scripts": {
-    "start": "forever server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
